--- a/detail_kayakslist1.html
+++ b/detail_kayakslist1.html
@@ -160,19 +160,16 @@
                 <h2>title</h2>
                 <ul>
                     <li>
-                        <img src="detail_kayakslist1img1.png" alt="detail_img">
+                        <img src="images/detail_kayakslist1img1.png" alt="detail_img">
                     </li>
                     <li>
-                        <img src="detail_kayakslist1img2.png" alt="detail_img">
+                        <img src="images/detail_kayakslist1img2.png" alt="detail_img">
                     </li>
                     <li>
-                        <img src="detail_kayakslist1img3.png" alt="detail_img">
+                        <img src="images/detail_kayakslist1img3.png" alt="detail_img">                      
                     </li>
                     <li>
-                        <img src="detail_kayakslist1img4.png" alt="detail_img">
-                    </li>
-                    <li>
-                        <img src="detail_kayakslist1img5.png" alt="detail_img">
+                        <img src="images/detail_kayakslisti1img4.png" alt="detail_img">                   
                     </li>
                 </ul>
             </article>
